--- a/alterar.html
+++ b/alterar.html
@@ -6,6 +6,7 @@
   <link href="css/forms.css" rel="stylesheet">
   <link href="css/modal.css" rel="stylesheet">
   <link href="css/sideBar.css" rel="stylesheet">
+  <script src="./js/alterar.js" defer></script>
   <title>Memory Game</title>
 </head>
 
@@ -102,12 +103,12 @@
               </svg>
             </div>
 
-            <input type="submit" class="button alterarB" value="Salvar">
+            <input type="submit" class="button alterarB" value="Salvar" onclick="temCerteza()">
 
           </form>
         </div>
       </div>
-      <div class="modal">
+      <div id="modal" class="modal">
         <div class="modal-content">
           <div class="close">
             <div></div>
@@ -119,8 +120,8 @@
           <div class="subtitle"> Tem certeza que deseja salvar informações?</div>
           <div class="space"></div>
           <div class="buttons">
-            <div class="cancel modalButton"> Cancelar </div>
-            <div class="modalButton"> Sim, salvar </div>
+            <div class="cancel modalButton" onclick="cancel()"> Cancelar </div>
+            <div class="modalButton" onclick="salvar()"> Sim, salvar </div>
           </div>
           <div class="space"></div>
         </div>
