--- a/sideBar.html
+++ b/sideBar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <script defer src="./js/sideBar.js"></script>
   <link href="css/sideBar.css" rel="stylesheet">
   <title>Memory Game</title>
@@ -16,30 +16,30 @@
 
         <div>
           <div class="line logo">
-            <img src="./img/miniLogo.png">
+            <img src="./img/miniLogo.png" alt="logo">
             <div class="show"> Memory Game </div>
           </div>
           <div class="space"></div>
           <a href="historico.html" class="line">
-            <img src="./img/user.svg">
+            <img src="./img/user.svg" alt="historico">
             <div class="show"> Olá, Marcelli! </div>
           </a>
-          <a href="home.html" class="line selected-expanded">
-            <img src="./img/home.svg">
+          <a href="home.html" class="line ">
+            <img src="./img/home.svg" alt="home">
             <div class="show"> Home </div>
           </a>
-          <a href="alterar.html" class="line">
-            <img src="./img/edit.svg">
+          <a href="alterar.html" class="line selected-expanded">
+            <img src="./img/edit.svg" alt="edit">
             <div class="show"> Editar Informações </div>
           </a>
           <a href="ranking.html" class="line">
-            <img src="./img/ranking.svg">
+            <img src="./img/ranking.svg" alt="ranking">
             <div class="show"> Ranking </div>
           </a>
         </div>
 
         <a href="login.html" class="line">
-          <img src="../img/logout.svg" class="logout">
+          <img src="../img/logout.svg" class="logout" alt="logout">
           <div class="show"> Logout </div>
         </a>
 
